[gd_scene load_steps=3 format=2]

[ext_resource path="res://rootScene/InventoryItem.tscn" type="PackedScene" id=1]
[ext_resource path="res://rootScene/Inventory.gd" type="Script" id=2]

[node name="Inventory" type="GridContainer"]
margin_right = 392.0
margin_bottom = 68.0
custom_constants/hseparation = 68
columns = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryItem" parent="." instance=ExtResource( 1 )]
position = Vector2( 35, 25.125 )

[node name="InventoryItem2" parent="." instance=ExtResource( 1 )]
position = Vector2( 70, 25.125 )

[node name="InventoryItem3" parent="." instance=ExtResource( 1 )]
position = Vector2( 105, 25.125 )

[connection signal="get_item" from="InventoryItem" to="." method="_on_InventoryItem_get_item"]
[connection signal="get_item" from="InventoryItem2" to="." method="_on_InventoryItem_get_item"]
[connection signal="get_item" from="InventoryItem3" to="." method="_on_InventoryItem_get_item"]
